[package]
name = "rocket_cors"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = "0.5.2"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde_derive = "1.0.111"
lazy_static = "1.4.0"